fixed spacing in gallery

--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,9 +1,24 @@
-.gallery-segment {
-  margin-bottom: 1.5rem !important;
+@media (min-width: 769px) {
+  .gallery-segment {
+    margin-bottom: 1.5rem !important;
+  }
+  .gallery-container {
+    margin: 2.5rem 5rem !important;
+  }
+  .gallery-element {
+    margin-right: 1.5rem;
+  }
 }
-.gallery-container {
-  margin: 2.5rem 5rem !important;
-}
-.gallery-element {
-  margin-right: 1.5rem;
+@media (max-width: 769px) {
+  .gallery-segment {
+    margin-bottom: 1.5rem !important;
+  }
+  .gallery-container {
+    margin: 0.5rem 2rem !important;
+  }
+  .gallery-element,
+  .gallery-element-2 {
+    padding: 0.5rem;
+    margin-bottom: 1.5rem;
+  }
 }
